Renamed plot and graph files to plot/graph_renderer_opengl.

--- a/src/glot/CMakeLists.txt
+++ b/src/glot/CMakeLists.txt
@@ -15,8 +15,8 @@ add_library(
 	STATIC
 		shader.cpp
 		shader_program.cpp
-		graph.cpp
-		plot.cpp
+		graph_renderer_opengl.cpp
+		plot_renderer_opengl.cpp
 		database.cpp
 		plugin_context.cpp
 		plugin_manager.cpp
