--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,3 +36,4 @@ configure_file(shaders/glyph/fragment.glsl glyph/fragment.glsl COPYONLY)
 configure_file(fonts/proggy_clean.png fonts/proggy_clean.png COPYONLY)
 
 configure_file(audio/Lurking_Threat_3.wav audio/Lurking_Threat_3.wav COPYONLY)
+configure_file(assets/marker_center.png assets/marker_center.png COPYONLY)
