--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,5 @@ configure_file(fonts/proggy_clean.png fonts/proggy_clean.png COPYONLY)
 
 configure_file(audio/Lurking_Threat_3.wav audio/Lurking_Threat_3.wav COPYONLY)
 configure_file(assets/marker_center.png assets/marker_center.png COPYONLY)
+configure_file(assets/marker_left.png assets/marker_left.png COPYONLY)
+configure_file(assets/marker_right.png assets/marker_right.png COPYONLY)
