Improved vscode tasks and launch configurations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "GLot (Run)",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/glot",
+            "program": "${workspaceFolder}/build/current/glot",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}/build/current",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -32,7 +32,7 @@
             "name": "GLot (Attach)",
             "type": "cppdbg",
             "request": "attach",
-            "program": "${workspaceFolder}/build/glot",
+            "program": "${workspaceFolder}/build/current/glot",
             "processId": "${command:pickProcess}",
             "MIMode": "gdb",
             "setupCommands": [
@@ -52,10 +52,10 @@
             "name": "GLot Tests",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/src/glot/tests",
+            "program": "${workspaceFolder}/build/current/src/glot/tests",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}/build/current",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -76,10 +76,10 @@
             "name": "GLot Benchmarks",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/src/glot/bench",
+            "program": "${workspaceFolder}/build/current/src/glot/bench",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/build",
+            "cwd": "${workspaceFolder}/build/current",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
