--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "configure",
             "type": "shell",
-            "command": "mkdir -p build && CONAN_SYSREQUIRES_MODE=enabled conan install -if ${workspaceFolder}/build -s build_type=Debug . && cmake -B build -DCMAKE_MODULE_PATH=${PWD}/build -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -DCMAKE_BUILD_TYPE=Debug -DBUILD_TESTS=ON -DUSE_SANITIZERS=ON .",
+            "command": ".vscode/configure.sh ${input:build_type}",
             "problemMatcher": [],
             "options": {
                 "cwd": "${workspaceFolder}"
@@ -19,10 +19,10 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "cmake --build . -j4",
+            "command": "cmake --build . -j`nproc`",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/build"
+                "cwd": "${workspaceFolder}/build/current"
             },
             "group": {
                 "kind": "build",
@@ -32,10 +32,10 @@
         {
             "label": "clean",
             "type": "shell",
-            "command": "cmake --build . --target clean",
+            "command": "cmake --build  --target clean",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/build"
+                "cwd": "${workspaceFolder}/build/current"
             },
             "group": {
                 "kind": "build",
@@ -47,12 +47,36 @@
             "command": "ctest --verbose",
             "problemMatcher": [],
             "options": {
-                "cwd": "${workspaceFolder}/build"
+                "cwd": "${workspaceFolder}/build/current",
+                "env": {
+                    "CTEST_OUTPUT_ON_FAILURE": "1",
+                    "GTEST_COLOR": "1"
+                }
             },
             "group": {
                 "kind": "test",
                 "isDefault": true
             }
+        },
+        {
+            "label": "wipe",
+            "type": "shell",
+            "command": "rm -rf build",
+            "problemMatcher": [],
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "group": {
+                "kind": "build"
+            }
         }
+    ],
+    "inputs": [
+        {
+            "id": "build_type",
+            "description": "The type of build",
+            "default": "Debug",
+            "type": "promptString"
+        },
     ]
 }
