Added selection zoom

--- a/src/glot/CMakeLists.txt
+++ b/src/glot/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(
 		graph.cpp
 		stb_impl.cpp
 		text_renderer_opengl.cpp
+		line_renderer_opengl.cpp
 )
 target_include_directories(glot PUBLIC .)
 target_link_libraries(
