--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,7 +32,7 @@
         {
             "label": "clean",
             "type": "shell",
-            "command": "cmake --build  --target clean",
+            "command": "cmake --build . --target clean",
             "problemMatcher": [],
             "options": {
                 "cwd": "${workspaceFolder}/build/current"
