Added a new selection box element which can be used to render the selection box

--- a/src/glot/CMakeLists.txt
+++ b/src/glot/CMakeLists.txt
@@ -30,6 +30,7 @@ add_library(
 		sprite.cpp
 		font_material.cpp
 		marker.cpp
+		selection_box.cpp
 )
 target_include_directories(glot PUBLIC .)
 target_link_libraries(
