Use more traditional and reusable objects for the drawing the various components on screen

--- a/src/glot/CMakeLists.txt
+++ b/src/glot/CMakeLists.txt
@@ -17,9 +17,6 @@ add_library(
 	STATIC
 		shader.cpp
 		shader_program.cpp
-		graph_renderer_opengl.cpp
-		plot_renderer_opengl.cpp
-		marker_renderer_opengl.cpp
 		plugin_context.cpp
 		plugin_manager.cpp
 		window.cpp
@@ -27,8 +24,13 @@ add_library(
 		wavegen_plugin.cpp
 		imgui_window.cpp
 		graph.cpp
-		text_renderer_opengl.cpp
-		line_renderer_opengl.cpp
+		label.cpp
+		plot.cpp
+		sprite.cpp
+		font.cpp
+		marker.cpp
+		selection_box.cpp
+		imgui_database_panel.cpp
 )
 target_include_directories(glot PUBLIC .)
 target_link_libraries(
