--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Coverage
       working-directory: ${{github.workspace}}/build
-      run: gcovr --root .. --xml --output coverage.xml --exclude-throw-branches 
+      run: gcovr --root .. --xml --output coverage.xml --exclude-throw-branches --exclude='.*/test/.*'
 
     - uses: codecov/codecov-action@v2
       with:
