--- a/src/glot/database/CMakeLists.txt
+++ b/src/glot/database/CMakeLists.txt
@@ -49,8 +49,8 @@ if (BUILD_TESTS)
 			GTest::GTest
 	)
 	if (BUILD_COVERAGE)
-		target_compile_options(tests PRIVATE -fprofile-arcs -ftest-coverage)
-		target_link_options(tests PUBLIC -fprofile-arcs -ftest-coverage)
+		target_compile_options(database_tests PRIVATE -fprofile-arcs -ftest-coverage)
+		target_link_options(database_tests PUBLIC -fprofile-arcs -ftest-coverage)
 	endif()
 	add_test(NAME Tests COMMAND database_tests)
 endif()
