Fixed vscode build tasks to run on all cores on macos

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,7 +19,12 @@
         {
             "label": "build",
             "type": "shell",
+            "linux": {
             "command": "cmake --build . -j`nproc`",
+            },
+            "osx": {
+                "command": "cmake --build . -j`sysctl -n hw.logicalcpu`"
+            },
             "problemMatcher": [],
             "options": {
                 "cwd": "${workspaceFolder}/build/current"
