--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MODULE_PATH=${{github.workspace}}/build -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DUSE_SANITIZERS=ON
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build
+      run: cmake --build ${{github.workspace}}/build -j`nproc`
 
     - name: Test
       working-directory: ${{github.workspace}}/build
@@ -56,6 +56,28 @@ jobs:
 
     - name: Build
       run: cmake --build ${{github.workspace}}\build --config Debug
+
+    - name: Test
+      working-directory: ${{github.workspace}}/build
+      run: ctest -C Debug --verbose
+
+  MacOS:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Install Conan
+      id: conan
+      uses: turtlebrowser/get-conan@main
+    
+    - name: Install Deps
+      run: conan install -if ${{github.workspace}}/build --build=missing -s build_type=Debug . 
+
+    - name: Configure CMake
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MODULE_PATH=${{github.workspace}}/build -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DUSE_SANITIZERS=ON
+
+    - name: Build
+      run: cmake --build ${{github.workspace}}/build --config Debug -j`sysctl -n hw.logicalcpu`"
 
     - name: Test
       working-directory: ${{github.workspace}}/build
