--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_MODULE_PATH=${{github.workspace}}/build -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON -DUSE_SANITIZERS=ON
 
     - name: Build
-      run: cmake --build ${{github.workspace}}/build --config Debug -j`sysctl -n hw.logicalcpu`"
+      run: cmake --build ${{github.workspace}}/build --config Debug -j`sysctl -n hw.logicalcpu`
 
     - name: Test
       working-directory: ${{github.workspace}}/build
