Allow different types of builds in the configure script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -84,7 +84,11 @@
             "type": "pickString",
             "options": [
                 "Debug",
-                "Release"
+                "Release",
+                "Test",
+                "TestCoverage",
+                "Benchmark",
+                "IWYU"
             ]
         }
     ]
