--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 on: push
 jobs:
   Ubuntu:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
 
@@ -13,7 +13,7 @@ jobs:
       - name: Install Deps
         run: |
           conan profile new default --detect && conan profile update settings.compiler.libcxx=libstdc++11 default
-          CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build .
+          CONAN_SYSREQUIRES_MODE=enabled conan install -if ${{github.workspace}}/build -c tools.system.package_manager:mode=install -c tools.system.package_manager:sudo=True .
           sudo apt-get install -y gcovr
 
       - name: Configure CMake
