--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(glot)
+project(amber)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -11,15 +11,15 @@ endif()
 add_subdirectory(src/glot)
 
 add_executable(main src/glot/main.cpp)
-target_link_libraries(main PRIVATE glot)
+target_link_libraries(main PRIVATE amber)
 if (NOT MSVC)
 	target_compile_options(main PRIVATE -Werror -Wall -Wextra)
 endif()
-set_target_properties(main PROPERTIES OUTPUT_NAME glot)
+set_target_properties(main PROPERTIES OUTPUT_NAME amber)
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT main)
 
 add_executable(demo src/glot/demo.cpp)
-target_link_libraries(demo PRIVATE glot)
+target_link_libraries(demo PRIVATE amber)
 
 # Copy assets and shaders to the build dir
 configure_file(shaders/plot/vertex.glsl shaders/plot/vertex.glsl COPYONLY)
