--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -61,7 +61,11 @@
             "group": {
                 "kind": "test",
                 "isDefault": true
-            }
+            },
+            "dependsOn": [
+                "build"
+            ],
+            "dependsOrder": "sequence"
         },
         {
             "label": "wipe",
