Move hitbox to another file

--- a/src/amber/CMakeLists.txt
+++ b/src/amber/CMakeLists.txt
@@ -38,6 +38,7 @@ add_library(
 		axis.cpp
 		view.cpp
 		ui.cpp
+		hitbox.cpp
 )
 target_include_directories(amber PUBLIC .)
 target_link_libraries(
