--- a/src/amber/CMakeLists.txt
+++ b/src/amber/CMakeLists.txt
@@ -78,7 +78,8 @@ if (BUILD_TESTS)
 	find_package(GTest REQUIRED)
 	add_executable(tests
 		test/test_transform.cpp
-		test/test_graph_utils.cpp
+		test/test_hitbox.cpp
+		test/test_view.cpp
 	)
 	target_link_libraries(
 		tests
